--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -9,6 +9,7 @@
     <link rel="icon" type="image/png" href="images/icons/favicon.ico"/>
     <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="/node_modules/font-awesome/css/font-awesome.min.css"/>
+    <link rel='stylesheet' href='/node_modules/timepicki/css/timepicki.css'/>
     <th:block th:if="${page=='sign-up' || page=='login'}">
         <link rel="stylesheet" href="/node_modules/@yaireo/tagify/dist/tagify.css">
         <link rel="stylesheet" href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css">
@@ -74,6 +75,9 @@
             </li>
             <li class="nav-item" sec:authorize="!isAuthenticated()">
                 <a class="nav-link" th:href="@{/sign-up}">가입</a>
+            </li>
+            <li class="nav-item" th:if="${account.role == T(com.alliz.domain.Role).ROLE_ADMIN}" sec:authorize="isAuthenticated()">
+                <a class="nav-link" th:href="@{/create-reservations}"><i class="fa fa-bus"></i></a>
             </li>
             <li class="nav-item" sec:authorize="isAuthenticated()">
                 <a class="nav-link" th:href="@{/notifications}">
