--- a/src/main/resources/templates/admin/new-reservations.html
+++ b/src/main/resources/templates/admin/new-reservations.html
@@ -7,7 +7,7 @@
     <div class="container">
         <div class="row mt-5 justify-content-center">
             <div class="col-2">
-                <div th:replace="fragments.html :: reservation-menu (currentMenu='reservation')"></div>
+                <div th:replace="fragments.html :: reservation-menu (currentMenu='create-reservation')"></div>
             </div>
             <div class="col-8">
                 <div th:if="${message}" class="alert alert-info alert-dismissible fade show mt-3" role="alert">
@@ -23,11 +23,11 @@
                     </button>
                 </div>
                 <div class="row">
-                    <h2 class="col-sm-12">차량 시간 등록</h2>
+                    <h2 class="col-sm-12">배차 정보 등록</h2>
                 </div>
                 <div class="row mt-3">
                     <form class="col-sm-10" action="#"
-                          th:action="@{/admin/reservations/add}" th:object="${reservationForm}" method="post" novalidate>
+                          th:action="@{/admin/reservation/add}" th:object="${reservationForm}" method="post" novalidate>
 
                         <div class="form-group">
                             <label for="location">장소</label>
